# Copernicus_Coding_Assessment

./: .gitignore  .gitmodules  Cargo.toml  README.md  run_pipeline.bat
src/: compare.rs  compare_pairs_main.rs  convolution.rs  main.rs  nms.rs  sobel.rs  threshold.rs
