[package]
name = "Copernicus_Coding_Assessment"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "edge-detect"
path = "src/main.rs"

[[bin]]
name = "compare-pairs"
path = "src/compare_pairs_main.rs"

[dependencies]
image   = "0.25"
clap    = { version = "4", features = ["derive"] }
anyhow  = "1"
rayon   = "1"
